# MtgViewer

./: .gitignore  app-release.apk  build.gradle  import-summary.txt  local.properties  settings.gradle
Script/: card.lua  global.lua  list.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lua/: lmathlib.c  ltable.c  lua.c  luac.c  luaconf.h
app/src/main/java/lu/cifer/mtgviewer/: CardAnalyzer.java  CardBundle.java  CardParser.java  LuaScript.java  MainActivity.java  SearchActivity.java
app/src/main/res/layout/: dialog_layout.xml  main_layout.xml  search_layout.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
